--- a/public/views/dias.html
+++ b/public/views/dias.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  
+
   <section class="container">
     <h1>📆 Relatório de Chamados às 18h</h1>
     <div style="text-align: center; margin-bottom: 1rem;">
@@ -25,6 +25,7 @@
         <tr>
           <th>Data</th>
           <th>Total</th>
+          <th>Acima da Meta</th>
         </tr>
       </thead>
       <tbody id="tabelaDias"></tbody>
