tudo ok, inclusive o envio no zap

--- a/public/views/detalhes.html
+++ b/public/views/detalhes.html
@@ -21,7 +21,7 @@
       <button onclick="baixarHoje()">📅 Baixar Excel de Hoje</button>
     </div>
 
-    <canvas id="graficoChamados" width="400" height="150"></canvas>
+       <canvas id="graficoHistorico" width="400" height="150"></canvas>
 
     <table>
       <thead>
@@ -35,7 +35,7 @@
       <tbody id="tabela-chamados"></tbody>
     </table>
   </div>
-
+  
   <script src="js/gerar_relatorio.js"></script>
 </body>
 </html>
