--- a/public/views/dias.html
+++ b/public/views/dias.html
@@ -34,6 +34,6 @@
     <p id="mediaDias" style="text-align:center; font-weight:bold;"></p>
   </section>
 
-  <script src="/js/dias.js"></script>
+  <script src="../js/dias.js"></script>
 </body>
 </html>
