Ok. mudamos muita coisa
Ele continua com as mesmas funcionalidades mas eu juntei todos os arquivos para otimizar e diminuir tantos. Ele continua com o problema de salvar. Mas agora está salvando ao 12h e as 18h. Só que não escreve novamente.

--- a/public/views/detalhes.html
+++ b/public/views/detalhes.html
@@ -36,6 +36,6 @@
     </table>
   </div>
   
-  <script src="js/gerar_relatorio.js"></script>
+  <script src="/js/detalhes.js"></script>
 </body>
 </html>
